<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/minus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/minus_description"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_column="0"
        android:onClick="minusOne"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/counter"
        android:layout_row="0"
        android:layout_column="1"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/plus"
        android:contentDescription="@string/plus_description"
        android:onClick="plusOne"
        android:layout_row="0"
        android:layout_column="2"/>

</GridLayout>
